@@ -1,6 +1,5 @@
 package com.example.ekart.controller;
 import com.example.ekart.dto.Address;
-import java.util.stream.Collectors;
 import java.util.Random;
 import java.util.Optional;
 import java.time.LocalDateTime;
@@ -14,7 +13,8 @@ import com.example.ekart.repository.*;
 import com.example.ekart.service.AdminAuthService;
 import com.example.ekart.service.MobileApiReadService;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
-import org.springframework.beans.factory.annotation.Autowired;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
@@ -63,6 +63,13 @@ import java.util.*;
 @RequestMapping("/api/flutter")
 @CrossOrigin(origins = "*")
 public class FlutterApiController {
+
+    private static final Logger LOGGER = LoggerFactory.getLogger(FlutterApiController.class);
+
+    private static final String ERR_CUSTOMER_NOT_FOUND = "Customer not found";
+    private static final String ERR_VENDOR_NOT_FOUND = "Vendor not found";
+    private static final String ERR_ORDER_NOT_FOUND = "Order not found";
+    private static final String ERR_PRODUCT_NOT_FOUND = "Product not found";
 
     // ── Dependencies (constructor injection, replaces @Autowired field injection) ──
     private final CustomerRepository customerRepository;
@@ -573,7 +580,7 @@ public class FlutterApiController {
 
         Order order = orderRepository.findById(id).orElse(null);
         if (order == null) {
-            res.put("success", false); res.put("message", "Order not found");
+            res.put("success", false); res.put("message", ERR_ORDER_NOT_FOUND);
             return ResponseEntity.badRequest().body(res);
         }
         if (order.getDeliveryBoy() == null || order.getDeliveryBoy().getId() != db.getId()) {
@@ -604,7 +611,7 @@ public class FlutterApiController {
         try {
             emailSender.sendDeliveryOtp(order.getCustomer(), otp, order.getId());
         } catch (Exception e) {
-            System.err.println("Delivery OTP email failed: " + e.getMessage());
+            LOGGER.warn("Delivery OTP email failed: {}", e.getMessage(), e);
         }
 
         res.put("success", true);
@@ -641,7 +648,7 @@ public class FlutterApiController {
 
         Order order = orderRepository.findById(id).orElse(null);
         if (order == null) {
-            res.put("success", false); res.put("message", "Order not found");
+            res.put("success", false); res.put("message", ERR_ORDER_NOT_FOUND);
             return ResponseEntity.badRequest().body(res);
         }
         if (order.getDeliveryBoy() == null || order.getDeliveryBoy().getId() != db.getId()) {
@@ -683,7 +690,7 @@ public class FlutterApiController {
         try {
             emailSender.sendDeliveryConfirmation(order.getCustomer(), order);
         } catch (Exception e) {
-            System.err.println("Delivery confirmation email failed: " + e.getMessage());
+            LOGGER.warn("Delivery confirmation email failed: {}", e.getMessage(), e);
         }
 
         res.put("success", true);
@@ -764,7 +771,7 @@ public class FlutterApiController {
             m.put("city", wh.getCity());
             m.put("code", wh.getWarehouseCode());
             return m;
-        }).collect(Collectors.toList());
+        }).toList();
         res.put("success", true);
         res.put("warehouses", data);
         return ResponseEntity.ok(res);
@@ -796,7 +803,7 @@ public class FlutterApiController {
             bm.put("linkUrl",      b.getLinkUrl()  != null ? b.getLinkUrl()  : "");
             bm.put("displayOrder", b.getDisplayOrder());
             return bm;
-        }).collect(Collectors.toList());
+        }).toList();
 
         Map<String, Object> res = new LinkedHashMap<>();
         res.put("success", true);
@@ -818,14 +825,14 @@ public class FlutterApiController {
         List<Product> products;
         if (search != null && !search.isBlank()) {
             products = productRepository.findByNameContainingIgnoreCase(search)
-                    .stream().filter(Product::isApproved).collect(Collectors.toList());
+                    .stream().filter(Product::isApproved).toList();
         } else if (category != null && !category.isBlank()) {
             products = productRepository.findByCategoryAndApprovedTrue(category);
         } else {
             products = productRepository.findByApprovedTrue();
         }
         res.put("success", true);
-        res.put("products", products.stream().map(this::mapProduct).collect(Collectors.toList()));
+        res.put("products", products.stream().map(this::mapProduct).toList());
         res.put("count", products.size());
         return ResponseEntity.ok(res);
     }
@@ -836,13 +843,13 @@ public class FlutterApiController {
         Map<String, Object> res = new HashMap<>();
         Product p = productRepository.findById(id).orElse(null);
         if (p == null || !p.isApproved()) {
-            res.put("success", false); res.put("message", "Product not found");
+            res.put("success", false); res.put("message", ERR_PRODUCT_NOT_FOUND);
             return ResponseEntity.badRequest().body(res);
         }
         Map<String, Object> pm = mapProduct(p);
         List<Review> reviews = reviewRepository.findAll().stream()
                 .filter(r -> r.getProduct() != null && r.getProduct().getId() == id)
-                .collect(Collectors.toList());
+                .toList();
         double avg = reviews.stream().mapToInt(Review::getRating).average().orElse(0.0);
         pm.put("reviews", reviews.stream().map(r -> {
             Map<String, Object> m = new HashMap<>();
@@ -851,7 +858,7 @@ public class FlutterApiController {
             m.put("comment", r.getComment());
             m.put("customerName", r.getCustomerName());
             return m;
-        }).collect(Collectors.toList()));
+        }).toList());
         pm.put("avgRating", Math.round(avg * 10.0) / 10.0);
         pm.put("reviewCount", reviews.size());
         res.put("success", true);
@@ -865,7 +872,7 @@ public class FlutterApiController {
         Map<String, Object> res = new HashMap<>();
         List<Review> reviews = reviewRepository.findAll().stream()
                 .filter(r -> r.getProduct() != null && r.getProduct().getId() == id)
-                .collect(Collectors.toList());
+                .toList();
         double avg = reviews.stream().mapToInt(Review::getRating).average().orElse(0.0);
         res.put("success", true);
         res.put("reviews", reviews.stream().map(r -> {
@@ -875,7 +882,7 @@ public class FlutterApiController {
             m.put("comment", r.getComment());
             m.put("customerName", r.getCustomerName());
             return m;
-        }).collect(Collectors.toList()));
+        }).toList());
         res.put("avgRating", Math.round(avg * 10.0) / 10.0);
         res.put("reviewCount", reviews.size());
         return ResponseEntity.ok(res);
@@ -887,7 +894,7 @@ public class FlutterApiController {
         Map<String, Object> res = new HashMap<>();
         List<String> categories = productRepository.findByApprovedTrue()
                 .stream().map(Product::getCategory).filter(Objects::nonNull)
-                .distinct().sorted().collect(Collectors.toList());
+                .distinct().sorted().toList();
         res.put("success", true);
         res.put("categories", categories);
         return ResponseEntity.ok(res);
@@ -902,10 +909,10 @@ public class FlutterApiController {
     public ResponseEntity<Map<String, Object>> getCart(@RequestHeader("X-Customer-Id") int customerId) {
         Map<String, Object> res = new HashMap<>();
         Customer customer = customerRepository.findById(customerId).orElse(null);
-        if (customer == null) { res.put("success", false); res.put("message", "Customer not found"); return ResponseEntity.badRequest().body(res); }
+        if (customer == null) { res.put("success", false); res.put("message", ERR_CUSTOMER_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
         Cart cart = customer.getCart();
         if (cart == null) { res.put("success", true); res.put("items", new ArrayList<>()); res.put("total", 0.0); res.put("count", 0); return ResponseEntity.ok(res); }
-        List<Map<String, Object>> items = cart.getItems().stream().map(this::mapItem).collect(Collectors.toList());
+        List<Map<String, Object>> items = cart.getItems().stream().map(this::mapItem).toList();
         double total = cart.getItems().stream().mapToDouble(i -> i.getPrice() * i.getQuantity()).sum();
         res.put("success", true); res.put("items", items); res.put("total", total); res.put("count", items.size());
         return ResponseEntity.ok(res);
@@ -919,10 +926,10 @@ public class FlutterApiController {
         Map<String, Object> res = new HashMap<>();
         try {
             Customer customer = customerRepository.findById(customerId).orElse(null);
-            if (customer == null) { res.put("success", false); res.put("message", "Customer not found"); return ResponseEntity.badRequest().body(res); }
+            if (customer == null) { res.put("success", false); res.put("message", ERR_CUSTOMER_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
             int productId = Integer.parseInt(body.get("productId").toString());
             Product product = productRepository.findById(productId).orElse(null);
-            if (product == null || !product.isApproved()) { res.put("success", false); res.put("message", "Product not found"); return ResponseEntity.badRequest().body(res); }
+            if (product == null || !product.isApproved()) { res.put("success", false); res.put("message", ERR_PRODUCT_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
             if (product.getStock() <= 0) { res.put("success", false); res.put("message", "Product out of stock"); return ResponseEntity.badRequest().body(res); }
             Cart cart = customer.getCart();
             if (cart == null) { cart = new Cart(); customer.setCart(cart); }
@@ -956,7 +963,7 @@ public class FlutterApiController {
         if (customer == null || customer.getCart() == null) { res.put("success", false); res.put("message", "Cart not found"); return ResponseEntity.badRequest().body(res); }
         List<Item> toDelete = customer.getCart().getItems().stream()
                 .filter(i -> i.getProductId() != null && i.getProductId() == productId)
-                .collect(Collectors.toList());
+                .toList();
         customer.getCart().getItems().removeAll(toDelete);
         customerRepository.save(customer);
         itemRepository.deleteAll(toDelete);
@@ -978,7 +985,7 @@ public class FlutterApiController {
         if (quantity <= 0) {
             List<Item> toDelete = cart.getItems().stream()
                     .filter(i -> i.getProductId() != null && i.getProductId() == productId)
-                    .collect(Collectors.toList());
+                    .toList();
             cart.getItems().removeAll(toDelete);
             customerRepository.save(customer);
             itemRepository.deleteAll(toDelete);
@@ -1015,7 +1022,7 @@ public class FlutterApiController {
         Map<String, Object> res = new HashMap<>();
         try {
             Customer customer = customerRepository.findById(customerId).orElse(null);
-            if (customer == null) { res.put("success", false); res.put("message", "Customer not found"); return ResponseEntity.badRequest().body(res); }
+            if (customer == null) { res.put("success", false); res.put("message", ERR_CUSTOMER_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
             Cart cart = customer.getCart();
             if (cart == null || cart.getItems().isEmpty()) { res.put("success", false); res.put("message", "Cart is empty"); return ResponseEntity.badRequest().body(res); }
 
@@ -1104,10 +1111,10 @@ public class FlutterApiController {
     public ResponseEntity<Map<String, Object>> getOrders(@RequestHeader("X-Customer-Id") int customerId) {
         Map<String, Object> res = new HashMap<>();
         Customer customer = customerRepository.findById(customerId).orElse(null);
-        if (customer == null) { res.put("success", false); res.put("message", "Customer not found"); return ResponseEntity.badRequest().body(res); }
+        if (customer == null) { res.put("success", false); res.put("message", ERR_CUSTOMER_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
         List<Order> orders = mobileApiReadService.findOrdersWithItems(customer);
         res.put("success", true);
-        res.put("orders", orders.stream().map(this::mapOrder).collect(Collectors.toList()));
+        res.put("orders", orders.stream().map(this::mapOrder).toList());
         return ResponseEntity.ok(res);
     }
 
@@ -1117,7 +1124,7 @@ public class FlutterApiController {
             @RequestHeader("X-Customer-Id") int customerId, @PathVariable int id) {
         Map<String, Object> res = new HashMap<>();
         Order order = mobileApiReadService.findOrderWithItems(id).orElse(null);
-        if (order == null || order.getCustomer().getId() != customerId) { res.put("success", false); res.put("message", "Order not found"); return ResponseEntity.badRequest().body(res); }
+        if (order == null || order.getCustomer().getId() != customerId) { res.put("success", false); res.put("message", ERR_ORDER_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
         res.put("success", true); res.put("order", mapOrder(order));
         return ResponseEntity.ok(res);
     }
@@ -1128,7 +1135,7 @@ public class FlutterApiController {
             @RequestHeader("X-Customer-Id") int customerId, @PathVariable int id) {
         Map<String, Object> res = new HashMap<>();
         Order order = mobileApiReadService.findOrderWithItems(id).orElse(null);
-        if (order == null || order.getCustomer().getId() != customerId) { res.put("success", false); res.put("message", "Order not found"); return ResponseEntity.badRequest().body(res); }
+        if (order == null || order.getCustomer().getId() != customerId) { res.put("success", false); res.put("message", ERR_ORDER_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
         if (order.getTrackingStatus() == TrackingStatus.DELIVERED || order.getTrackingStatus() == TrackingStatus.CANCELLED) {
             res.put("success", false); res.put("message", "Cannot cancel this order");
             return ResponseEntity.badRequest().body(res);
@@ -1154,7 +1161,7 @@ public class FlutterApiController {
     public ResponseEntity<Map<String, Object>> getWishlist(@RequestHeader("X-Customer-Id") int customerId) {
         Map<String, Object> res = new HashMap<>();
         Customer customer = customerRepository.findById(customerId).orElse(null);
-        if (customer == null) { res.put("success", false); res.put("message", "Customer not found"); return ResponseEntity.badRequest().body(res); }
+        if (customer == null) { res.put("success", false); res.put("message", ERR_CUSTOMER_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
         List<Wishlist> wishlist = mobileApiReadService.findWishlistWithProducts(customer);
         List<Map<String, Object>> items = wishlist.stream().map(w -> {
             Map<String, Object> m = new HashMap<>();
@@ -1163,7 +1170,7 @@ public class FlutterApiController {
             m.put("productId", p.getId()); m.put("name", p.getName()); m.put("price", p.getPrice());
             m.put("imageLink", p.getImageLink()); m.put("category", p.getCategory()); m.put("inStock", p.getStock() > 0);
             return m;
-        }).collect(Collectors.toList());
+        }).toList();
         res.put("success", true); res.put("count", items.size()); res.put("items", items);
         return ResponseEntity.ok(res);
     }
@@ -1173,9 +1180,9 @@ public class FlutterApiController {
     public ResponseEntity<Map<String, Object>> getWishlistIds(@RequestHeader("X-Customer-Id") int customerId) {
         Map<String, Object> res = new HashMap<>();
         Customer customer = customerRepository.findById(customerId).orElse(null);
-        if (customer == null) { res.put("success", false); res.put("message", "Customer not found"); return ResponseEntity.badRequest().body(res); }
+        if (customer == null) { res.put("success", false); res.put("message", ERR_CUSTOMER_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
         List<Integer> ids = mobileApiReadService.findWishlistWithProducts(customer).stream()
-                .map(w -> w.getProduct().getId()).collect(Collectors.toList());
+                .map(w -> w.getProduct().getId()).toList();
         res.put("success", true); res.put("ids", ids);
         return ResponseEntity.ok(res);
     }
@@ -1187,13 +1194,13 @@ public class FlutterApiController {
             @RequestBody Map<String, Integer> body) {
         Map<String, Object> res = new HashMap<>();
         Customer customer = customerRepository.findById(customerId).orElse(null);
-        if (customer == null) { res.put("success", false); res.put("message", "Customer not found"); return ResponseEntity.badRequest().body(res); }
+        if (customer == null) { res.put("success", false); res.put("message", ERR_CUSTOMER_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
         Integer productId = body.get("productId");
         if (productId == null) { res.put("success", false); res.put("message", "productId is required"); return ResponseEntity.badRequest().body(res); }
         Product product = productRepository.findById(productId).orElse(null);
-        if (product == null) { res.put("success", false); res.put("message", "Product not found"); return ResponseEntity.status(404).body(res); }
+        if (product == null) { res.put("success", false); res.put("message", ERR_PRODUCT_NOT_FOUND); return ResponseEntity.status(404).body(res); }
         List<Wishlist> existing = wishlistRepository.findByCustomer(customer).stream()
-                .filter(w -> w.getProduct().getId() == productId).collect(Collectors.toList());
+                .filter(w -> w.getProduct().getId() == productId).toList();
         if (!existing.isEmpty()) {
             wishlistRepository.deleteAll(existing);
             res.put("success", true); res.put("wishlisted", false); res.put("message", "Removed from wishlist");
@@ -1214,7 +1221,7 @@ public class FlutterApiController {
     public ResponseEntity<Map<String, Object>> getProfile(@RequestHeader("X-Customer-Id") int customerId) {
         Map<String, Object> res = new HashMap<>();
         Customer customer = mobileApiReadService.findCustomerWithAddresses(customerId);
-        if (customer == null) { res.put("success", false); res.put("message", "Customer not found"); return ResponseEntity.badRequest().body(res); }
+        if (customer == null) { res.put("success", false); res.put("message", ERR_CUSTOMER_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
         Map<String, Object> profile = new HashMap<>();
         profile.put("id", customer.getId()); profile.put("name", customer.getName());
         profile.put("email", customer.getEmail()); profile.put("mobile", customer.getMobile());
@@ -1230,7 +1237,7 @@ public class FlutterApiController {
             am.put("postalCode",      a.getPostalCode()    != null ? a.getPostalCode()    : "");
             am.put("details",         a.getDetails()       != null ? a.getDetails()       : "");
             return am;
-        }).collect(Collectors.toList()));
+        }).toList());
         res.put("success", true); res.put("profile", profile);
         return ResponseEntity.ok(res);
     }
@@ -1242,7 +1249,7 @@ public class FlutterApiController {
             @RequestBody Map<String, Object> body) {
         Map<String, Object> res = new HashMap<>();
         Customer customer = customerRepository.findById(customerId).orElse(null);
-        if (customer == null) { res.put("success", false); res.put("message", "Customer not found"); return ResponseEntity.badRequest().body(res); }
+        if (customer == null) { res.put("success", false); res.put("message", ERR_CUSTOMER_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
         if (body.containsKey("name"))   customer.setName((String) body.get("name"));
         if (body.containsKey("mobile")) customer.setMobile(Long.parseLong(body.get("mobile").toString()));
         customerRepository.save(customer);
@@ -1262,7 +1269,7 @@ public class FlutterApiController {
             @RequestBody Map<String, String> body) {
         Map<String, Object> res = new HashMap<>();
         Customer customer = mobileApiReadService.findCustomerWithAddresses(customerId);
-        if (customer == null) { res.put("success", false); res.put("message", "Customer not found"); return ResponseEntity.badRequest().body(res); }
+        if (customer == null) { res.put("success", false); res.put("message", ERR_CUSTOMER_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
 
         Address address = new Address();
         address.setCustomer(customer);
@@ -1303,7 +1310,7 @@ public class FlutterApiController {
             @RequestHeader("X-Customer-Id") int customerId, @PathVariable int id) {
         Map<String, Object> res = new HashMap<>();
         Customer customer = mobileApiReadService.findCustomerWithAddresses(customerId);
-        if (customer == null) { res.put("success", false); res.put("message", "Customer not found"); return ResponseEntity.badRequest().body(res); }
+        if (customer == null) { res.put("success", false); res.put("message", ERR_CUSTOMER_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
         customer.getAddresses().removeIf(a -> a.getId() == id);
         customerRepository.save(customer);
         res.put("success", true); res.put("message", "Address deleted");
@@ -1327,12 +1334,12 @@ public class FlutterApiController {
             @RequestBody Map<String, Object> body) {
         Map<String, Object> res = new HashMap<>();
         Customer customer = customerRepository.findById(customerId).orElse(null);
-        if (customer == null) { res.put("success", false); res.put("message", "Customer not found"); return ResponseEntity.badRequest().body(res); }
+        if (customer == null) { res.put("success", false); res.put("message", ERR_CUSTOMER_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
         int productId  = Integer.parseInt(body.get("productId").toString());
         int rating     = Integer.parseInt(body.get("rating").toString());
         String comment = (String) body.get("comment");
         Product product = productRepository.findById(productId).orElse(null);
-        if (product == null) { res.put("success", false); res.put("message", "Product not found"); return ResponseEntity.status(404).body(res); }
+        if (product == null) { res.put("success", false); res.put("message", ERR_PRODUCT_NOT_FOUND); return ResponseEntity.status(404).body(res); }
         if (reviewRepository.existsByProductIdAndCustomerId(productId, customer.getId())) {
             res.put("success", false); res.put("message", "You have already reviewed this product");
             return ResponseEntity.badRequest().body(res);
@@ -1361,12 +1368,12 @@ public class FlutterApiController {
         Map<String, Object> res = new HashMap<>();
         Customer customer = customerRepository.findById(customerId).orElse(null);
         if (customer == null) {
-            res.put("success", false); res.put("message", "Customer not found");
+            res.put("success", false); res.put("message", ERR_CUSTOMER_NOT_FOUND);
             return ResponseEntity.badRequest().body(res);
         }
         Product product = productRepository.findById(productId).orElse(null);
         if (product == null) {
-            res.put("success", false); res.put("message", "Product not found");
+            res.put("success", false); res.put("message", ERR_PRODUCT_NOT_FOUND);
             return ResponseEntity.status(404).body(res);
         }
         if (product.getStock() > 0) {
@@ -1401,12 +1408,12 @@ public class FlutterApiController {
         Map<String, Object> res = new HashMap<>();
         Customer customer = customerRepository.findById(customerId).orElse(null);
         if (customer == null) {
-            res.put("success", false); res.put("message", "Customer not found");
+            res.put("success", false); res.put("message", ERR_CUSTOMER_NOT_FOUND);
             return ResponseEntity.badRequest().body(res);
         }
         Product product = productRepository.findById(productId).orElse(null);
         if (product == null) {
-            res.put("success", false); res.put("message", "Product not found");
+            res.put("success", false); res.put("message", ERR_PRODUCT_NOT_FOUND);
             return ResponseEntity.status(404).body(res);
         }
         Optional<BackInStockSubscription> existing =
@@ -1436,7 +1443,7 @@ public class FlutterApiController {
         Map<String, Object> res = new HashMap<>();
         Customer customer = customerRepository.findById(customerId).orElse(null);
         if (customer == null) {
-            res.put("success", false); res.put("message", "Customer not found");
+            res.put("success", false); res.put("message", ERR_CUSTOMER_NOT_FOUND);
             return ResponseEntity.badRequest().body(res);
         }
         Product product = productRepository.findById(productId).orElse(null);
@@ -1460,9 +1467,9 @@ public class FlutterApiController {
     public ResponseEntity<Map<String, Object>> getSpendingSummary(@RequestHeader("X-Customer-Id") int customerId) {
         Map<String, Object> res = new HashMap<>();
         Customer customer = customerRepository.findById(customerId).orElse(null);
-        if (customer == null) { res.put("success", false); res.put("message", "Customer not found"); return ResponseEntity.badRequest().body(res); }
+        if (customer == null) { res.put("success", false); res.put("message", ERR_CUSTOMER_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
         List<Order> delivered = orderRepository.findByCustomer(customer).stream()
-                .filter(o -> o.getTrackingStatus() == TrackingStatus.DELIVERED).collect(Collectors.toList());
+                .filter(o -> o.getTrackingStatus() == TrackingStatus.DELIVERED).toList();
         if (delivered.isEmpty()) { res.put("success", true); res.put("hasData", false); return ResponseEntity.ok(res); }
         double totalSpent = delivered.stream().mapToDouble(Order::getAmount).sum();
         int    totalOrders = delivered.size();
@@ -1502,12 +1509,12 @@ public class FlutterApiController {
         Map<String, Object> res = new HashMap<>();
         try {
             Customer customer = customerRepository.findById(customerId).orElse(null);
-            if (customer == null) { res.put("success", false); res.put("message", "Customer not found"); return ResponseEntity.badRequest().body(res); }
+            if (customer == null) { res.put("success", false); res.put("message", ERR_CUSTOMER_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
             int orderId   = Integer.parseInt(body.get("orderId").toString());
             String reason = (String) body.getOrDefault("reason", "");
             String type   = (String) body.getOrDefault("type", "REFUND");
             Order order = orderRepository.findById(orderId).orElse(null);
-            if (order == null || order.getCustomer().getId() != customerId) { res.put("success", false); res.put("message", "Order not found"); return ResponseEntity.badRequest().body(res); }
+            if (order == null || order.getCustomer().getId() != customerId) { res.put("success", false); res.put("message", ERR_ORDER_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
             if (order.getTrackingStatus() != TrackingStatus.DELIVERED) { res.put("success", false); res.put("message", "Refund can only be requested for delivered orders"); return ResponseEntity.badRequest().body(res); }
             Refund refund = new Refund();
             refund.setOrder(order); refund.setCustomer(customer);
@@ -1527,7 +1534,7 @@ public class FlutterApiController {
             @RequestHeader("X-Customer-Id") int customerId, @PathVariable int orderId) {
         Map<String, Object> res = new HashMap<>();
         Order order = orderRepository.findById(orderId).orElse(null);
-        if (order == null || order.getCustomer().getId() != customerId) { res.put("success", false); res.put("message", "Order not found"); return ResponseEntity.badRequest().body(res); }
+        if (order == null || order.getCustomer().getId() != customerId) { res.put("success", false); res.put("message", ERR_ORDER_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
         List<Refund> refunds = refundRepository.findByOrder(order);
         if (refunds.isEmpty()) { res.put("success", true); res.put("hasRefund", false); return ResponseEntity.ok(res); }
         Refund latest = refunds.get(refunds.size() - 1);
@@ -1552,10 +1559,10 @@ public class FlutterApiController {
     public ResponseEntity<Map<String, Object>> getVendorProducts(@RequestHeader("X-Vendor-Id") int vendorId) {
         Map<String, Object> res = new HashMap<>();
         Vendor vendor = vendorRepository.findById(vendorId).orElse(null);
-        if (vendor == null) { res.put("success", false); res.put("message", "Vendor not found"); return ResponseEntity.badRequest().body(res); }
+        if (vendor == null) { res.put("success", false); res.put("message", ERR_VENDOR_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
         List<Product> products = productRepository.findByVendor(vendor);
         res.put("success", true);
-        res.put("products", products.stream().map(this::mapProduct).collect(Collectors.toList()));
+        res.put("products", products.stream().map(this::mapProduct).toList());
         res.put("count", products.size());
         return ResponseEntity.ok(res);
     }
@@ -1565,19 +1572,19 @@ public class FlutterApiController {
     public ResponseEntity<Map<String, Object>> getVendorOrders(@RequestHeader("X-Vendor-Id") int vendorId) {
         Map<String, Object> res = new HashMap<>();
         Vendor vendor = vendorRepository.findById(vendorId).orElse(null);
-        if (vendor == null) { res.put("success", false); res.put("message", "Vendor not found"); return ResponseEntity.badRequest().body(res); }
-        List<Integer> vendorProductIds = productRepository.findByVendor(vendor).stream().map(Product::getId).collect(Collectors.toList());
+        if (vendor == null) { res.put("success", false); res.put("message", ERR_VENDOR_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
+        List<Integer> vendorProductIds = productRepository.findByVendor(vendor).stream().map(Product::getId).toList();
         List<Order> allOrders = orderRepository.findOrdersByVendor(vendor);
         List<Map<String, Object>> vendorOrders = allOrders.stream().map(order -> {
             Map<String, Object> o = mapOrder(order);
             List<Map<String, Object>> vendorItems = order.getItems().stream()
                     .filter(i -> i.getProductId() != null && vendorProductIds.contains(i.getProductId()))
-                    .map(this::mapItem).collect(Collectors.toList());
+                    .map(this::mapItem).toList();
             o.put("items", vendorItems);
             double vendorTotal = vendorItems.stream().mapToDouble(i -> (double) i.get("price") * (int) i.get("quantity")).sum();
             o.put("vendorTotal", vendorTotal);
             return o;
-        }).collect(Collectors.toList());
+        }).toList();
         res.put("success", true); res.put("orders", vendorOrders);
         return ResponseEntity.ok(res);
     }
@@ -1587,9 +1594,9 @@ public class FlutterApiController {
     public ResponseEntity<Map<String, Object>> getVendorStats(@RequestHeader("X-Vendor-Id") int vendorId) {
         Map<String, Object> res = new HashMap<>();
         Vendor vendor = vendorRepository.findById(vendorId).orElse(null);
-        if (vendor == null) { res.put("success", false); res.put("message", "Vendor not found"); return ResponseEntity.badRequest().body(res); }
+        if (vendor == null) { res.put("success", false); res.put("message", ERR_VENDOR_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
         List<Product> products = productRepository.findByVendor(vendor);
-        List<Integer> productIds = products.stream().map(Product::getId).collect(Collectors.toList());
+        List<Integer> productIds = products.stream().map(Product::getId).toList();
         List<Order> orders = orderRepository.findOrdersByVendor(vendor);
         double totalRevenue = orders.stream().filter(o -> o.getTrackingStatus() != TrackingStatus.CANCELLED)
                 .flatMap(o -> o.getItems().stream())
@@ -1613,7 +1620,7 @@ public class FlutterApiController {
             @RequestHeader("X-Vendor-Id") int vendorId, @RequestBody Map<String, Object> body) {
         Map<String, Object> res = new HashMap<>();
         Vendor vendor = vendorRepository.findById(vendorId).orElse(null);
-        if (vendor == null) { res.put("success", false); res.put("message", "Vendor not found"); return ResponseEntity.badRequest().body(res); }
+        if (vendor == null) { res.put("success", false); res.put("message", ERR_VENDOR_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
         try {
             Product p = new Product();
             p.setName((String) body.get("name")); p.setDescription((String) body.get("description"));
@@ -1637,7 +1644,7 @@ public class FlutterApiController {
             @RequestHeader("X-Vendor-Id") int vendorId, @PathVariable int id, @RequestBody Map<String, Object> body) {
         Map<String, Object> res = new HashMap<>();
         Vendor vendor = vendorRepository.findById(vendorId).orElse(null);
-        if (vendor == null) { res.put("success", false); res.put("message", "Vendor not found"); return ResponseEntity.badRequest().body(res); }
+        if (vendor == null) { res.put("success", false); res.put("message", ERR_VENDOR_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
         Product p = productRepository.findById(id).orElse(null);
         if (p == null || p.getVendor() == null || p.getVendor().getId() != vendorId) { res.put("success", false); res.put("message", "Product not found or not yours"); return ResponseEntity.badRequest().body(res); }
         try {
@@ -1661,7 +1668,7 @@ public class FlutterApiController {
             @RequestHeader("X-Vendor-Id") int vendorId, @PathVariable int id) {
         Map<String, Object> res = new HashMap<>();
         Vendor vendor = vendorRepository.findById(vendorId).orElse(null);
-        if (vendor == null) { res.put("success", false); res.put("message", "Vendor not found"); return ResponseEntity.badRequest().body(res); }
+        if (vendor == null) { res.put("success", false); res.put("message", ERR_VENDOR_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
         Product p = productRepository.findById(id).orElse(null);
         if (p == null || p.getVendor() == null || p.getVendor().getId() != vendorId) { res.put("success", false); res.put("message", "Product not found or not yours"); return ResponseEntity.badRequest().body(res); }
         productRepository.delete(p);
@@ -1674,11 +1681,11 @@ public class FlutterApiController {
     public ResponseEntity<Map<String, Object>> vendorSalesReport(@RequestHeader("X-Vendor-Id") int vendorId) {
         Map<String, Object> res = new HashMap<>();
         Vendor vendor = vendorRepository.findById(vendorId).orElse(null);
-        if (vendor == null) { res.put("success", false); res.put("message", "Vendor not found"); return ResponseEntity.badRequest().body(res); }
+        if (vendor == null) { res.put("success", false); res.put("message", ERR_VENDOR_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
         List<Product> products  = productRepository.findByVendor(vendor);
-        List<Integer> productIds = products.stream().map(Product::getId).collect(Collectors.toList());
+        List<Integer> productIds = products.stream().map(Product::getId).toList();
         List<Order>   allOrders = orderRepository.findOrdersByVendor(vendor);
-        List<Order>   activeOrders = allOrders.stream().filter(o -> o.getTrackingStatus() != TrackingStatus.CANCELLED).collect(Collectors.toList());
+        List<Order>   activeOrders = allOrders.stream().filter(o -> o.getTrackingStatus() != TrackingStatus.CANCELLED).toList();
         double totalRevenue = activeOrders.stream().flatMap(o -> o.getItems().stream())
                 .filter(i -> i.getProductId() != null && productIds.contains(i.getProductId()))
                 .mapToDouble(i -> i.getPrice() * i.getQuantity()).sum();
@@ -1698,15 +1705,15 @@ public class FlutterApiController {
                     int units = unitsSoldMap.getOrDefault(p.getId(), 0);
                     m.put("id", p.getId()); m.put("name", p.getName()); m.put("unitsSold", units); m.put("revenue", units * p.getPrice());
                     return m;
-                }).collect(Collectors.toList());
+                }).toList();
         List<Map<String, Object>> recentOrders = allOrders.stream()
                 .sorted(Comparator.comparingInt(Order::getId).reversed()).limit(10).map(o -> {
-                    List<Item> vi = o.getItems().stream().filter(i -> i.getProductId() != null && productIds.contains(i.getProductId())).collect(Collectors.toList());
+                    List<Item> vi = o.getItems().stream().filter(i -> i.getProductId() != null && productIds.contains(i.getProductId())).toList();
                     double vTotal = vi.stream().mapToDouble(i -> i.getPrice() * i.getQuantity()).sum();
                     Map<String, Object> m = new HashMap<>();
                     m.put("id", o.getId()); m.put("trackingStatus", o.getTrackingStatus().name()); m.put("vendorTotal", vTotal);
                     return m;
-                }).collect(Collectors.toList());
+                }).toList();
         res.put("success", true); res.put("totalRevenue", totalRevenue);
         res.put("totalOrders", allOrders.size()); res.put("totalProducts", products.size());
         res.put("pendingOrders", pendingOrders); res.put("topProducts", topProducts); res.put("recentOrders", recentOrders);
@@ -1722,7 +1729,7 @@ public class FlutterApiController {
     public ResponseEntity<Map<String, Object>> getVendorProfile(@RequestHeader("X-Vendor-Id") int vendorId) {
         Map<String, Object> res = new HashMap<>();
         Vendor vendor = vendorRepository.findById(vendorId).orElse(null);
-        if (vendor == null) { res.put("success", false); res.put("message", "Vendor not found"); return ResponseEntity.badRequest().body(res); }
+        if (vendor == null) { res.put("success", false); res.put("message", ERR_VENDOR_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
         Map<String, Object> v = new HashMap<>();
         v.put("id", vendor.getId()); v.put("name", vendor.getName());
         v.put("email", vendor.getEmail()); v.put("mobile", vendor.getMobile());
@@ -1737,7 +1744,7 @@ public class FlutterApiController {
             @RequestHeader("X-Vendor-Id") int vendorId, @RequestBody Map<String, Object> body) {
         Map<String, Object> res = new HashMap<>();
         Vendor vendor = vendorRepository.findById(vendorId).orElse(null);
-        if (vendor == null) { res.put("success", false); res.put("message", "Vendor not found"); return ResponseEntity.badRequest().body(res); }
+        if (vendor == null) { res.put("success", false); res.put("message", ERR_VENDOR_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
         if (body.containsKey("name") && !((String) body.get("name")).isBlank())
             vendor.setName((String) body.get("name"));
         if (body.containsKey("mobile"))
@@ -1752,7 +1759,7 @@ public class FlutterApiController {
     public ResponseEntity<Map<String, Object>> getStockAlerts(@RequestHeader("X-Vendor-Id") int vendorId) {
         Map<String, Object> res = new HashMap<>();
         Vendor vendor = vendorRepository.findById(vendorId).orElse(null);
-        if (vendor == null) { res.put("success", false); res.put("message", "Vendor not found"); return ResponseEntity.badRequest().body(res); }
+        if (vendor == null) { res.put("success", false); res.put("message", ERR_VENDOR_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
         List<StockAlert> alerts = stockAlertRepository.findByVendor(vendor);
         alerts.sort((a, b) -> {
             if (a.isAcknowledged() != b.isAcknowledged()) return a.isAcknowledged() ? 1 : -1;
@@ -1770,7 +1777,7 @@ public class FlutterApiController {
             m.put("acknowledged", a.isAcknowledged());
             m.put("alertTime",    a.getAlertTime() != null ? a.getAlertTime().toString() : null);
             return m;
-        }).collect(Collectors.toList());
+        }).toList();
         res.put("success", true); res.put("alerts", alertMaps); res.put("unacknowledgedCount", unacknowledged);
         return ResponseEntity.ok(res);
     }
@@ -1781,7 +1788,7 @@ public class FlutterApiController {
             @RequestHeader("X-Vendor-Id") int vendorId, @PathVariable int id) {
         Map<String, Object> res = new HashMap<>();
         Vendor vendor = vendorRepository.findById(vendorId).orElse(null);
-        if (vendor == null) { res.put("success", false); res.put("message", "Vendor not found"); return ResponseEntity.badRequest().body(res); }
+        if (vendor == null) { res.put("success", false); res.put("message", ERR_VENDOR_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
         StockAlert alert = stockAlertRepository.findById(id).orElse(null);
         if (alert == null || alert.getVendor().getId() != vendorId) { res.put("success", false); res.put("message", "Alert not found"); return ResponseEntity.badRequest().body(res); }
         alert.setAcknowledged(true);
@@ -1803,14 +1810,14 @@ public class FlutterApiController {
             m.put("id", c.getId()); m.put("name", c.getName()); m.put("email", c.getEmail());
             m.put("mobile", c.getMobile()); m.put("active", c.isActive()); m.put("verified", c.isVerified());
             return m;
-        }).collect(Collectors.toList());
+        }).toList();
         List<Map<String, Object>> vendors = vendorRepository.findAll().stream().map(v -> {
             Map<String, Object> m = new HashMap<>();
             m.put("id", v.getId()); m.put("name", v.getName()); m.put("email", v.getEmail());
             m.put("mobile", v.getMobile()); m.put("vendorCode", v.getVendorCode());
             m.put("active", v.isVerified()); m.put("verified", v.isVerified());
             return m;
-        }).collect(Collectors.toList());
+        }).toList();
         res.put("success", true); res.put("customers", customers); res.put("vendors", vendors);
         return ResponseEntity.ok(res);
     }
@@ -1820,7 +1827,7 @@ public class FlutterApiController {
     public ResponseEntity<Map<String, Object>> adminToggleCustomer(@PathVariable int id) {
         Map<String, Object> res = new HashMap<>();
         Customer c = customerRepository.findById(id).orElse(null);
-        if (c == null) { res.put("success", false); res.put("message", "Customer not found"); return ResponseEntity.badRequest().body(res); }
+        if (c == null) { res.put("success", false); res.put("message", ERR_CUSTOMER_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
         c.setActive(!c.isActive()); customerRepository.save(c);
         res.put("success", true); res.put("message", c.isActive() ? "Account activated" : "Account suspended"); res.put("active", c.isActive());
         return ResponseEntity.ok(res);
@@ -1831,7 +1838,7 @@ public class FlutterApiController {
     public ResponseEntity<Map<String, Object>> adminToggleVendor(@PathVariable int id) {
         Map<String, Object> res = new HashMap<>();
         Vendor v = vendorRepository.findById(id).orElse(null);
-        if (v == null) { res.put("success", false); res.put("message", "Vendor not found"); return ResponseEntity.badRequest().body(res); }
+        if (v == null) { res.put("success", false); res.put("message", ERR_VENDOR_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
         v.setVerified(!v.isVerified()); vendorRepository.save(v);
         res.put("success", true); res.put("message", v.isVerified() ? "Vendor activated" : "Vendor suspended"); res.put("active", v.isVerified());
         return ResponseEntity.ok(res);
@@ -1842,7 +1849,7 @@ public class FlutterApiController {
     public ResponseEntity<Map<String, Object>> adminGetProducts() {
         Map<String, Object> res = new HashMap<>();
         res.put("success", true);
-        res.put("products", productRepository.findAll().stream().map(this::mapProduct).collect(Collectors.toList()));
+        res.put("products", productRepository.findAll().stream().map(this::mapProduct).toList());
         return ResponseEntity.ok(res);
     }
 
@@ -1851,7 +1858,7 @@ public class FlutterApiController {
     public ResponseEntity<Map<String, Object>> adminApproveProduct(@PathVariable int id) {
         Map<String, Object> res = new HashMap<>();
         Product p = productRepository.findById(id).orElse(null);
-        if (p == null) { res.put("success", false); res.put("message", "Product not found"); return ResponseEntity.badRequest().body(res); }
+        if (p == null) { res.put("success", false); res.put("message", ERR_PRODUCT_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
         p.setApproved(true); productRepository.save(p);
         res.put("success", true); res.put("message", "Product approved and is now visible to customers");
         return ResponseEntity.ok(res);
@@ -1862,7 +1869,7 @@ public class FlutterApiController {
     public ResponseEntity<Map<String, Object>> adminRejectProduct(@PathVariable int id) {
         Map<String, Object> res = new HashMap<>();
         Product p = productRepository.findById(id).orElse(null);
-        if (p == null) { res.put("success", false); res.put("message", "Product not found"); return ResponseEntity.badRequest().body(res); }
+        if (p == null) { res.put("success", false); res.put("message", ERR_PRODUCT_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
         p.setApproved(false); productRepository.save(p);
         res.put("success", true); res.put("message", "Product rejected / hidden from customers");
         return ResponseEntity.ok(res);
@@ -1874,7 +1881,7 @@ public class FlutterApiController {
         Map<String, Object> res = new HashMap<>();
         List<Map<String, Object>> orders = orderRepository.findAll().stream()
                 .sorted(Comparator.comparingInt(Order::getId).reversed())
-                .map(this::mapOrder).collect(Collectors.toList());
+                .map(this::mapOrder).toList();
         res.put("success", true); res.put("orders", orders);
         return ResponseEntity.ok(res);
     }
@@ -1885,7 +1892,7 @@ public class FlutterApiController {
             @PathVariable int id, @RequestBody Map<String, String> body) {
         Map<String, Object> res = new HashMap<>();
         Order order = orderRepository.findById(id).orElse(null);
-        if (order == null) { res.put("success", false); res.put("message", "Order not found"); return ResponseEntity.badRequest().body(res); }
+        if (order == null) { res.put("success", false); res.put("message", ERR_ORDER_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
         try {
             TrackingStatus newStatus = TrackingStatus.valueOf(body.get("status"));
             order.setTrackingStatus(newStatus); orderRepository.save(order);
@@ -1907,7 +1914,7 @@ public class FlutterApiController {
             m.put("mobile", v.getMobile()); m.put("vendorCode", v.getVendorCode());
             m.put("active", v.isVerified()); m.put("verified", v.isVerified());
             return m;
-        }).collect(Collectors.toList());
+        }).toList();
         res.put("success", true); res.put("vendors", vendors);
         return ResponseEntity.ok(res);
     }
@@ -1925,9 +1932,9 @@ public class FlutterApiController {
             @RequestHeader("X-Customer-Id") int customerId, @PathVariable int id) {
         Map<String, Object> res = new HashMap<>();
         Customer customer = customerRepository.findById(customerId).orElse(null);
-        if (customer == null) { res.put("success", false); res.put("message", "Customer not found"); return ResponseEntity.badRequest().body(res); }
+        if (customer == null) { res.put("success", false); res.put("message", ERR_CUSTOMER_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
         Order order = orderRepository.findById(id).orElse(null);
-        if (order == null || order.getCustomer().getId() != customerId) { res.put("success", false); res.put("message", "Order not found"); return ResponseEntity.badRequest().body(res); }
+        if (order == null || order.getCustomer().getId() != customerId) { res.put("success", false); res.put("message", ERR_ORDER_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
         Cart cart = customer.getCart();
         if (cart == null) { cart = new Cart(); customer.setCart(cart); }
         cart.getItems().clear();
@@ -1960,7 +1967,7 @@ public class FlutterApiController {
             @RequestBody Map<String, Object> body) {
         Map<String, Object> res = new HashMap<>();
         Customer customer = customerRepository.findById(customerId).orElse(null);
-        if (customer == null) { res.put("success", false); res.put("message", "Customer not found"); return ResponseEntity.badRequest().body(res); }
+        if (customer == null) { res.put("success", false); res.put("message", ERR_CUSTOMER_NOT_FOUND); return ResponseEntity.badRequest().body(res); }
         String current = (String) body.get("currentPassword");
         String newPwd  = (String) body.get("newPassword");
         if (current == null || newPwd == null) { res.put("success", false); res.put("message", "Both passwords required"); return ResponseEntity.badRequest().body(res); }
@@ -2008,7 +2015,7 @@ public class FlutterApiController {
         m.put("currentCity", o.getCurrentCity());
         m.put("orderDate", o.getOrderDate() != null ? o.getOrderDate().toString() : null);
         m.put("replacementRequested", o.isReplacementRequested());
-        m.put("items", o.getItems().stream().map(this::mapItem).collect(Collectors.toList()));
+        m.put("items", o.getItems().stream().map(this::mapItem).toList());
         if (o.getCustomer() != null) m.put("customerName", o.getCustomer().getName());
         return m;
     }
@@ -2100,7 +2107,7 @@ public class FlutterApiController {
         if (!filter.equals("all")) {
             try {
                 int star = Integer.parseInt(filter);
-                filtered = filtered.stream().filter(r -> r.getRating() == star).collect(Collectors.toList());
+                filtered = filtered.stream().filter(r -> r.getRating() == star).toList();
             } catch (NumberFormatException ignored) {}
         }
         if (!search.isBlank()) {
@@ -2109,7 +2116,7 @@ public class FlutterApiController {
                 (r.getCustomerName() != null && r.getCustomerName().toLowerCase().contains(q)) ||
                 (r.getComment()      != null && r.getComment().toLowerCase().contains(q)) ||
                 (r.getProduct()      != null && r.getProduct().getName().toLowerCase().contains(q))
-            ).collect(Collectors.toList());
+            ).toList();
         }
         filtered.sort((a, b) -> {
             if (a.getCreatedAt() == null) return 1;
@@ -2127,7 +2134,7 @@ public class FlutterApiController {
             m.put("productId",    r.getProduct() != null ? r.getProduct().getId() : 0);
             m.put("createdAt",    r.getCreatedAt() != null ? r.getCreatedAt().toString() : "");
             return m;
-        }).collect(Collectors.toList());
+        }).toList();
 
         res.put("success",      true);
         res.put("reviews",      reviewMaps);
@@ -2168,7 +2175,7 @@ public class FlutterApiController {
             List<com.example.ekart.dto.Review> toDelete = reviewRepository.findAll().stream()
                     .filter(r -> r.getProduct() != null &&
                                  r.getProduct().getName().equalsIgnoreCase(productName))
-                    .collect(Collectors.toList());
+                    .toList();
             reviewRepository.deleteAll(toDelete);
             res.put("success", true);
             res.put("message", "Deleted " + toDelete.size() + " reviews for \"" + productName + "\"");
@@ -2198,7 +2205,7 @@ public class FlutterApiController {
             m.put("showOnCustomerHome", b.isShowOnCustomerHome());
             m.put("displayOrder",       b.getDisplayOrder());
             return m;
-        }).collect(Collectors.toList());
+        }).toList();
         res.put("success", true); res.put("banners", banners);
         return ResponseEntity.ok(res);
     }
@@ -2281,7 +2288,7 @@ public class FlutterApiController {
                     .filter(db -> db.getWarehouse() != null && db.getWarehouse().getId() == wh.getId()).count();
             m.put("deliveryBoyCount", boyCount);
             return m;
-        }).collect(Collectors.toList());
+        }).toList();
         res.put("success", true); res.put("warehouses", warehouses);
         return ResponseEntity.ok(res);
     }
@@ -2343,7 +2350,7 @@ public class FlutterApiController {
                     m.put("adminApproved",   db.isAdminApproved());
                     m.put("assignedPinCodes",db.getAssignedPinCodes() != null ? db.getAssignedPinCodes() : "");
                     return m;
-                }).collect(Collectors.toList());
+                }).toList();
         res.put("success", true); res.put("boys", boys);
         return ResponseEntity.ok(res);
     }
@@ -2370,7 +2377,7 @@ public class FlutterApiController {
                     m.put("reason",              req.getReason() != null ? req.getReason() : "");
                     m.put("requestedAt",         req.getRequestedAt() != null ? req.getRequestedAt().toString() : "");
                     return m;
-                }).collect(Collectors.toList());
+                }).toList();
         res.put("success", true); res.put("requests", requests);
         return ResponseEntity.ok(res);
     }
@@ -2457,4 +2464,6 @@ public class FlutterApiController {
         return ResponseEntity.ok(res);
     }
 }
+
+
 
